--- a/index.html
+++ b/index.html
@@ -452,7 +452,15 @@ const CONFIG = {
   arr: 0.03
 };
 
-const SPAWN_POS = { default: { x: 3, y: 0 }, I: { x: 3, y: -1 }, O: { x: 4, y: 0 } };
+const SPAWN_X_STD = 3;
+const SPAWN_X_O = SPAWN_X_STD - 1;
+const SPAWN_X_I = SPAWN_X_STD + 1;
+const SPAWN_Y = -2;
+const SPAWN_POS = {
+  default: { x: SPAWN_X_STD, y: SPAWN_Y },
+  I: { x: SPAWN_X_I, y: SPAWN_Y },
+  O: { x: SPAWN_X_O, y: SPAWN_Y }
+};
 const BAG = ['I', 'J', 'L', 'O', 'S', 'T', 'Z'];
 const COLORS = {
   I: '#5dd9ff',
@@ -758,9 +766,10 @@ class MultiplayerClient {
       }
     }
     const activeType = BAG[Math.floor(Math.random() * BAG.length)];
+    const spawn = SPAWN_POS[activeType] || SPAWN_POS.default;
     const activeCells = TETROMINO_SHAPES[activeType][0].map(([dx, dy]) => ({
-      x: 4 + dx,
-      y: 0 + dy
+      x: spawn.x + dx,
+      y: spawn.y + dy
     }));
     const time = Math.random() * 120;
     const pieces = Math.floor(time * 1.5);
@@ -768,7 +777,7 @@ class MultiplayerClient {
     const lines = Math.floor(Math.random() * 40);
     return {
       matrix,
-      active: { type: activeType, rotation: 0, x: 4, y: 0, cells: activeCells },
+      active: { type: activeType, rotation: 0, x: spawn.x, y: spawn.y, cells: activeCells },
       hold: null,
       queue: BAG.slice(0, 5),
       stats: {
