--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ input::placeholder{color:#4f5a8c}
         <div class="panel-title">HOLD</div>
         <canvas id="holdCanvas" width="140" height="140"></canvas>
       </div>
-      <canvas id="boardCanvas" width="280" height="560"></canvas>
+      <canvas id="boardCanvas" width="280" height="616"></canvas>
       <div class="panel">
         <div class="panel-title">NEXT</div>
         <canvas id="nextCanvas" width="140" height="420"></canvas>
@@ -113,12 +113,12 @@ input::placeholder{color:#4f5a8c}
       <div class="match-boards hidden" id="matchBoards">
         <div class="match-board">
           <div class="panel-title" id="localBoardTitle"></div>
-          <canvas id="localMatchBoard" width="200" height="400"></canvas>
+          <canvas id="localMatchBoard" width="200" height="440"></canvas>
           <div class="match-stats" id="localBoardStats"></div>
         </div>
         <div class="match-board">
           <div class="panel-title" id="remoteBoardTitle"></div>
-          <canvas id="remoteMatchBoard" width="200" height="400"></canvas>
+          <canvas id="remoteMatchBoard" width="200" height="440"></canvas>
           <div class="match-stats" id="remoteBoardStats"></div>
         </div>
       </div>
@@ -633,8 +633,8 @@ class Board {
     const perfectClear = cleared > 0 && this.grid.every(row => row.every(v => !v));
     return { lines: cleared, perfectClear };
   }
-  getVisible() {
-    return this.grid.slice(this.hidden);
+  getSnapshot() {
+    return this.grid.map(row => row.slice());
   }
 }
 
@@ -986,12 +986,26 @@ class Game {
   }
   lockPiece() {
     if (!this.active) return;
+    const placedCells = this.active.cells();
     this.board.place(this.active);
+    const toppedOut = placedCells.some(cell => cell.y < 0);
+    this.stats.addPiece();
+    if (toppedOut) {
+      this.combo = -1;
+      this.lastClear = null;
+      this.active = null;
+      this.holdUsed = false;
+      this.lockTimer = 0;
+      this.fallAcc = 0;
+      this.softDrop = false;
+      this.areTimer = 0;
+      this.finish();
+      return;
+    }
     const spinResult = this.evaluateSpin(this.active);
     const clear = this.board.clearLines();
     const lines = clear.lines;
     const perfectClear = clear.perfectClear;
-    this.stats.addPiece();
     let attack = 0;
     if (lines > 0) {
       this.combo += 1;
@@ -1079,7 +1093,7 @@ class Game {
     return { time: snap.time, apm: snap.apm, pps: snap.pps, lines: snap.lines };
   }
   getRenderState() {
-    const grid = this.board.getVisible();
+    const grid = this.board.getSnapshot();
     const active = this.active ? this.active.clone() : null;
     const ghost = active ? this.ghostCells(active) : null;
     return {
@@ -1089,12 +1103,11 @@ class Game {
       hold: this.holdPiece,
       queue: this.queue.slice(0, this.config.previewCount),
       stats: this.stats.snapshot(),
-      state: this.state,
-      hidden: this.board.hidden
+      state: this.state
     };
   }
   getNetworkState() {
-    const matrix = this.board.getVisible().map(row => row.map(cell => cell));
+    const matrix = this.board.getSnapshot();
     const active = this.active
       ? {
           type: this.active.type,
@@ -1131,18 +1144,39 @@ class BoardSnapshotRenderer {
     this.canvas = canvas;
     this.ctx = canvas.getContext('2d');
     this.width = config.boardWidth;
-    this.height = config.boardHeight;
     this.blockSize = Math.floor(canvas.width / this.width);
+    this.baseRows = config.boardHeight + (config.hiddenRows || 0);
+    this.totalRows = this.baseRows;
+    this.ensureCanvasHeight(this.totalRows);
+  }
+  ensureCanvasHeight(rows) {
+    if (rows <= 0) return;
+    const targetRows = Math.max(rows, this.baseRows);
+    const requiredHeight = targetRows * this.blockSize;
+    if (this.canvas.height !== requiredHeight) {
+      this.canvas.height = requiredHeight;
+    }
+    const cssHeight = `${requiredHeight}px`;
+    if (this.canvas.style.height !== cssHeight) {
+      this.canvas.style.height = cssHeight;
+    }
+    this.totalRows = targetRows;
   }
   clear() {
     this.ctx.fillStyle = '#050a18';
     this.ctx.fillRect(0, 0, this.canvas.width, this.canvas.height);
   }
   render(snapshot) {
+    const matrix = snapshot && Array.isArray(snapshot.matrix) ? snapshot.matrix : [];
+    if (matrix.length > 0) {
+      this.ensureCanvasHeight(matrix.length);
+    } else {
+      this.ensureCanvasHeight(this.baseRows);
+    }
     this.clear();
     if (!snapshot) return;
-    const matrix = snapshot.matrix || [];
-    for (let y = 0; y < Math.min(this.height, matrix.length); y++) {
+    const rows = this.totalRows;
+    for (let y = 0; y < rows; y++) {
       const row = matrix[y] || [];
       for (let x = 0; x < this.width; x++) {
         const cell = row[x];
@@ -1158,9 +1192,10 @@ class BoardSnapshotRenderer {
     }
   }
   drawCells(cells, color) {
+    if (!Array.isArray(cells)) return;
     for (const cell of cells) {
       if (typeof cell.x !== 'number' || typeof cell.y !== 'number') continue;
-      if (cell.y < 0 || cell.y >= this.height) continue;
+      if (cell.y < 0 || cell.y >= this.totalRows) continue;
       if (cell.x < 0 || cell.x >= this.width) continue;
       this.drawBlock(cell.x, cell.y, color);
     }
@@ -1175,12 +1210,29 @@ class BoardSnapshotRenderer {
 
 class Renderer {
   constructor(elements) {
-    this.boardCtx = elements.board.getContext('2d');
+    this.boardCanvas = elements.board;
+    this.boardCtx = this.boardCanvas.getContext('2d');
     this.holdCtx = elements.hold.getContext('2d');
     this.nextCtx = elements.next.getContext('2d');
     this.hud = elements.hud;
     this.config = elements.config;
-    this.blockSize = Math.floor(elements.board.width / this.config.boardWidth);
+    this.cols = this.config.boardWidth;
+    this.blockSize = Math.floor(this.boardCanvas.width / this.cols);
+    this.baseRows = this.config.boardHeight + (this.config.hiddenRows || 0);
+    this.ensureBoardCanvasHeight(this.baseRows);
+  }
+  ensureBoardCanvasHeight(rows) {
+    if (rows <= 0) return;
+    const targetRows = Math.max(rows, this.baseRows);
+    const requiredHeight = targetRows * this.blockSize;
+    if (this.boardCanvas.height !== requiredHeight) {
+      this.boardCanvas.height = requiredHeight;
+    }
+    const cssHeight = `${requiredHeight}px`;
+    if (this.boardCanvas.style.height !== cssHeight) {
+      this.boardCanvas.style.height = cssHeight;
+    }
+    this.currentRows = targetRows;
   }
   render(game) {
     const state = game.getRenderState();
@@ -1192,28 +1244,35 @@ class Renderer {
   drawBoard(state) {
     const ctx = this.boardCtx;
     const cell = this.blockSize;
+    const rows = state.grid.length;
+    this.ensureBoardCanvasHeight(rows);
+    const totalRows = this.currentRows || rows;
     ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
     ctx.fillStyle = '#0b1324';
     ctx.fillRect(0, 0, ctx.canvas.width, ctx.canvas.height);
     ctx.strokeStyle = 'rgba(255,255,255,0.05)';
-    for (let y = 0; y < this.config.boardHeight; y++) {
-      for (let x = 0; x < this.config.boardWidth; x++) {
+    for (let y = 0; y < totalRows; y++) {
+      for (let x = 0; x < this.cols; x++) {
         ctx.strokeRect(x * cell, y * cell, cell, cell);
       }
     }
     const drawCells = (cells, color, alpha = 1) => {
+      if (!Array.isArray(cells)) return;
       ctx.fillStyle = color;
       ctx.globalAlpha = alpha;
       for (const c of cells) {
-        const vy = c.y - state.hidden;
-        if (vy < 0 || vy >= this.config.boardHeight) continue;
-        ctx.fillRect(c.x * cell, vy * cell, cell, cell);
+        if (!c) continue;
+        if (c.y < 0 || c.y >= totalRows) continue;
+        if (c.x < 0 || c.x >= this.cols) continue;
+        ctx.fillRect(c.x * cell, c.y * cell, cell, cell);
       }
       ctx.globalAlpha = 1;
     };
-    for (let y = 0; y < state.grid.length; y++) {
-      for (let x = 0; x < state.grid[y].length; x++) {
-        const type = state.grid[y][x];
+    for (let y = 0; y < totalRows; y++) {
+      const row = state.grid[y] || [];
+      const cols = Math.min(row.length, this.cols);
+      for (let x = 0; x < cols; x++) {
+        const type = row[x];
         if (type) {
           ctx.fillStyle = COLORS[type];
           ctx.fillRect(x * cell, y * cell, cell, cell);
