Fix SRS 90-degree kick routing

--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@ input::placeholder{color:#4f5a8c}
 
     // Y-DOWN ⇒ invert Y from published tables.
     const KICKS90 = {
-      T: {
+      // Y-DOWN ⇒ all offsets already inverted from official SRS.
+      // JLSTZ applies to J, L, S, Z, and T (T uses this table exactly).
+      JLSTZ: {
         '0>R': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2]],
         'R>0': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]],
         'R>2': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]],
@@ -203,27 +205,21 @@ input::placeholder{color:#4f5a8c}
         'L>0': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2]],
         '0>L': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2]]
       },
-      // Extra tuck kicks [0,1],[1,1],[-1,1] added for Z/S/L/J to allow pocket spins like modern clients. T and I stay standard.
-      ZSLJ: {
-        '0>R': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2], [0, 1], [1, 1], [-1, 1]],
-        'R>0': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2], [0, 1], [1, 1], [-1, 1]],
-        'R>2': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2], [0, 1], [1, 1], [-1, 1]],
-        '2>R': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2], [0, 1], [1, 1], [-1, 1]],
-        '2>L': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2], [0, 1], [1, 1], [-1, 1]],
-        'L>2': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2], [0, 1], [1, 1], [-1, 1]],
-        'L>0': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2], [0, 1], [1, 1], [-1, 1]],
-        '0>L': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2], [0, 1], [1, 1], [-1, 1]]
-      },
+
+      // I-piece SRS+ (tetr.io-style symmetric I kicks)
       I: {
-        // I-piece uses SRS+ (left tables mirrored from right).
         '0>R': [[0, 0], [-2, 0], [1, 0], [-2, 1], [1, -2]],
         'R>0': [[0, 0], [2, 0], [-1, 0], [2, -1], [-1, 2]],
+
         'R>2': [[0, 0], [-1, 0], [2, 0], [-1, -2], [2, 1]],
         '2>R': [[0, 0], [1, 0], [-2, 0], [1, 2], [-2, -1]],
-        '0>L': [[0, 0], [2, 0], [-1, 0], [2, 1], [-1, -2]],
+
+        // mirrored (leftward) versions to keep I symmetric:
+        '2>L': [[0, 0], [2, 0], [-1, 0], [2, -1], [-1, 2]],
+        'L>2': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
+
         'L>0': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
-        'L>2': [[0, 0], [1, 0], [-2, 0], [1, -2], [-2, 1]],
-        '2>L': [[0, 0], [-1, 0], [2, 0], [-1, 2], [2, -1]]
+        '0>L': [[0, 0], [2, 0], [-1, 0], [2, 1], [-1, -2]]
       }
     };
 
@@ -331,15 +327,15 @@ input::placeholder{color:#4f5a8c}
 
     function get90KickTests(type, from, to) {
       const key = `${ROTATION_NAMES[from]}>${ROTATION_NAMES[to]}`;
-      let table;
+      let kicks;
       if (type === 'I') {
-        table = KICKS90.I;
-      } else if (type === 'T') {
-        table = KICKS90.T;
+        kicks = KICKS90.I[key];
+      } else if (type === 'O') {
+        kicks = null;
       } else {
-        table = KICKS90.ZSLJ;
+        // T, J, L, S, Z all use the shared JLSTZ kickset.
+        kicks = KICKS90.JLSTZ[key];
       }
-      const kicks = table && table[key];
       return kicks && kicks.length ? kicks : [[0, 0]];
     }
 
