Fix SRS kicks and remove duplicate implementation

--- a/index.html
+++ b/index.html
@@ -141,377 +141,6 @@ input::placeholder{color:#4f5a8c}
 
 <script>
 (() => {
-  // Super Rotation System (SRS) definition with wall kicks (Y-axis downwards).
-  (function initializeSRS() {
-    const ROTATION_NAMES = ['0', 'R', '2', 'L'];
-    const PIECE_SHAPES = {
-      T: [
-        [[-1, 0], [0, 0], [1, 0], [0, -1]],
-        [[0, -1], [0, 0], [0, 1], [1, 0]],
-        [[-1, 0], [0, 0], [1, 0], [0, 1]],
-        [[0, -1], [0, 0], [0, 1], [-1, 0]]
-      ],
-      L: [
-        [[-1, 0], [0, 0], [1, 0], [1, -1]],
-        [[0, -1], [0, 0], [0, 1], [1, 1]],
-        [[-1, 0], [0, 0], [1, 0], [-1, 1]],
-        [[0, -1], [0, 0], [0, 1], [-1, -1]]
-      ],
-      J: [
-        [[-1, 0], [0, 0], [1, 0], [-1, -1]],
-        [[0, -1], [0, 0], [0, 1], [1, -1]],
-        [[-1, 0], [0, 0], [1, 0], [1, 1]],
-        [[0, -1], [0, 0], [0, 1], [-1, 1]]
-      ],
-      S: [
-        [[-1, 0], [0, 0], [0, -1], [1, -1]],
-        [[0, -1], [0, 0], [1, 0], [1, 1]],
-        [[-1, 1], [0, 1], [0, 0], [1, 0]],
-        [[-1, -1], [-1, 0], [0, 0], [0, 1]]
-      ],
-      Z: [
-        [[-1, -1], [0, -1], [0, 0], [1, 0]],
-        [[1, -1], [1, 0], [0, 0], [0, 1]],
-        [[-1, 0], [0, 0], [0, 1], [1, 1]],
-        [[0, -1], [0, 0], [-1, 0], [-1, 1]]
-      ],
-      I: [
-        [[-1, 0], [0, 0], [1, 0], [2, 0]],
-        [[0, -1], [0, 0], [0, 1], [0, 2]],
-        [[-2, 0], [-1, 0], [0, 0], [1, 0]],
-        [[0, -2], [0, -1], [0, 0], [0, 1]]
-      ],
-      O: [
-        [[0, 0], [1, 0], [0, -1], [1, -1]],
-        [[0, 0], [1, 0], [0, -1], [1, -1]],
-        [[0, 0], [1, 0], [0, -1], [1, -1]],
-        [[0, 0], [1, 0], [0, -1], [1, -1]]
-      ]
-    };
-
-    const O_ORIGIN_OFFSETS = [[0, 0], [0, -1], [-1, -1], [-1, 0]];
-
-    // Y-DOWN ⇒ invert Y from published tables.
-    const KICKS90 = {
-      // Y-DOWN ⇒ all offsets already inverted from official SRS.
-      // JLSTZ applies to J, L, S, Z, and T (T uses this table exactly).
-      JLSTZ: {
-        '0>R': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2]],
-        'R>0': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]],
-        'R>2': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]],
-        '2>R': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2]],
-        '2>L': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2]],
-        'L>2': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2]],
-        'L>0': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2]],
-        '0>L': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2]]
-      },
-
-      // I-piece SRS+ (tetr.io-style symmetric I kicks)
-      I: {
-        '0>R': [[0, 0], [-2, 0], [1, 0], [-2, 1], [1, -2]],
-        'R>0': [[0, 0], [2, 0], [-1, 0], [2, -1], [-1, 2]],
-
-        'R>2': [[0, 0], [-1, 0], [2, 0], [-1, -2], [2, 1]],
-        '2>R': [[0, 0], [1, 0], [-2, 0], [1, 2], [-2, -1]],
-
-        // mirrored (leftward) versions to keep I symmetric:
-        '2>L': [[0, 0], [2, 0], [-1, 0], [2, -1], [-1, 2]],
-        'L>2': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
-
-        'L>0': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
-        '0>L': [[0, 0], [2, 0], [-1, 0], [2, 1], [-1, -2]]
-      }
-    };
-
-    // TODO: Replace with official TETR.IO 180 kick tables when available.
-    const DEFAULT_180_KICKS = {
-      I: {
-        '0>2': [[0, 0], [-1, 0], [1, 0], [-2, 0], [2, 0], [-1, -1], [1, -1]],
-        '2>0': [[0, 0], [1, 0], [-1, 0], [2, 0], [-2, 0], [1, 1], [-1, 1]],
-        'R>L': [[0, 0], [1, 0], [-2, 0], [1, -1], [-2, -1], [2, 0]],
-        'L>R': [[0, 0], [-1, 0], [2, 0], [-1, -1], [2, -1], [-2, 0]]
-      },
-      J: {
-        '0>2': [[0, 0], [0, 1], [-1, 0], [1, 0], [0, -1]],
-        '2>0': [[0, 0], [0, -1], [-1, 0], [1, 0], [0, 1]],
-        'R>L': [[0, 0], [1, 0], [0, 1], [1, 1], [-1, 0]],
-        'L>R': [[0, 0], [-1, 0], [0, 1], [-1, 1], [1, 0]]
-      },
-      L: {
-        '0>2': [[0, 0], [0, 1], [-1, 0], [1, 0], [0, -1]],
-        '2>0': [[0, 0], [0, -1], [-1, 0], [1, 0], [0, 1]],
-        'R>L': [[0, 0], [1, 0], [0, 1], [1, 1], [-1, 0]],
-        'L>R': [[0, 0], [-1, 0], [0, 1], [-1, 1], [1, 0]]
-      },
-      O: {
-        '0>2': [[0, 0]],
-        '2>0': [[0, 0]],
-        'R>L': [[0, 0]],
-        'L>R': [[0, 0]]
-      },
-      S: {
-        '0>2': [[0, 0], [0, 1], [-1, 0], [1, 0]],
-        '2>0': [[0, 0], [0, -1], [-1, 0], [1, 0]],
-        'R>L': [[0, 0], [1, 0], [0, 1], [1, 1]],
-        'L>R': [[0, 0], [-1, 0], [0, 1], [-1, 1]]
-      },
-      T: {
-        '0>2': [[0, 0], [0, 1], [-1, 0], [1, 0], [0, -1]],
-        '2>0': [[0, 0], [0, -1], [-1, 0], [1, 0], [0, 1]],
-        'R>L': [[0, 0], [1, 0], [0, 1], [1, 1], [-1, 0]],
-        'L>R': [[0, 0], [-1, 0], [0, 1], [-1, 1], [1, 0]]
-      },
-      Z: {
-        '0>2': [[0, 0], [0, 1], [-1, 0], [1, 0]],
-        '2>0': [[0, 0], [0, -1], [-1, 0], [1, 0]],
-        'R>L': [[0, 0], [1, 0], [0, 1], [1, 1]],
-        'L>R': [[0, 0], [-1, 0], [0, 1], [-1, 1]]
-      }
-    };
-
-    const options = {
-      blockJLDownkickOn90to270: true
-    };
-
-    function cloneKickset(source) {
-      const result = {};
-      if (!source) return result;
-      for (const piece in source) {
-        if (!Object.prototype.hasOwnProperty.call(source, piece)) continue;
-        const entries = source[piece];
-        const clone = {};
-        for (const key in entries) {
-          if (!Object.prototype.hasOwnProperty.call(entries, key)) continue;
-          clone[key] = entries[key].map(offset => [offset[0], offset[1]]);
-        }
-        result[piece] = clone;
-      }
-      return result;
-    }
-
-    function mergeKicksets(base, override) {
-      const merged = cloneKickset(base);
-      if (!override) return merged;
-      for (const piece in override) {
-        if (!Object.prototype.hasOwnProperty.call(override, piece)) continue;
-        const target = merged[piece] || (merged[piece] = {});
-        const entries = override[piece];
-        for (const key in entries) {
-          if (!Object.prototype.hasOwnProperty.call(entries, key)) continue;
-          target[key] = entries[key].map(offset => [offset[0], offset[1]]);
-        }
-      }
-      return merged;
-    }
-
-    let kicks180 = mergeKicksets(DEFAULT_180_KICKS);
-
-    function getCells(piece) {
-      const shape = PIECE_SHAPES[piece.type];
-      if (!shape) return [];
-      const offsets = shape[piece.rot & 3];
-      return offsets.map(([dx, dy]) => [piece.x + dx, piece.y + dy]);
-    }
-
-    function canPlace(piece, board) {
-      const cells = getCells(piece);
-      for (let i = 0; i < cells.length; i++) {
-        const x = cells[i][0];
-        const y = cells[i][1];
-        if (x < 0 || x >= board.width) return false;
-        if (y >= board.height) return false;
-        if (y >= 0 && !board.isEmpty(x, y)) return false;
-      }
-      return true;
-    }
-
-    function get90KickTests(type, from, to) {
-      const key = `${ROTATION_NAMES[from]}>${ROTATION_NAMES[to]}`;
-      let kicks;
-      if (type === 'I') {
-        kicks = KICKS90.I[key];
-      } else if (type === 'O') {
-        kicks = null;
-      } else {
-        // T, J, L, S, Z all use the shared JLSTZ kickset.
-        kicks = KICKS90.JLSTZ[key];
-      }
-      return kicks && kicks.length ? kicks : [[0, 0]];
-    }
-
-    function get180KickTests(type, from, to) {
-      const key = `${ROTATION_NAMES[from]}>${ROTATION_NAMES[to]}`;
-      const table = kicks180[type];
-      let kicks = table && table[key];
-      if (!kicks || !kicks.length) {
-        return [[0, 0]];
-      }
-      if (
-        options.blockJLDownkickOn90to270 &&
-        (type === 'J' || type === 'L') &&
-        ((from === 1 && to === 3) || (from === 3 && to === 1))
-      ) {
-        const filtered = kicks.filter(([dx, dy]) => dy <= 0);
-        if (filtered.length) {
-          kicks = filtered;
-        }
-      }
-      return kicks;
-    }
-
-    function applyRotation(piece, candidate) {
-      piece.x = candidate.x;
-      piece.y = candidate.y;
-      piece.rot = candidate.rot & 3;
-    }
-
-    function tryRotate90Mutable(piece, dirCW, board) {
-      const from = piece.rot & 3;
-      const to = (from + (dirCW ? 1 : 3)) & 3;
-      if (piece.type === 'O') {
-        const adjust = O_ORIGIN_OFFSETS;
-        const candidate = {
-          type: piece.type,
-          x: piece.x + adjust[from][0] - adjust[to][0],
-          y: piece.y + adjust[from][1] - adjust[to][1],
-          rot: to
-        };
-        if (canPlace(candidate, board)) {
-          applyRotation(piece, candidate);
-          return true;
-        }
-        return false;
-      }
-      const kicks = get90KickTests(piece.type, from, to);
-      for (let i = 0; i < kicks.length; i++) {
-        const dx = kicks[i][0];
-        const dy = kicks[i][1];
-        const candidate = { type: piece.type, x: piece.x + dx, y: piece.y + dy, rot: to };
-        if (canPlace(candidate, board)) {
-          applyRotation(piece, candidate);
-          return true;
-        }
-      }
-      return false;
-    }
-
-    function tryRotate180Mutable(piece, board) {
-      const from = piece.rot & 3;
-      const to = (from + 2) & 3;
-      if (piece.type === 'O') {
-        const adjust = O_ORIGIN_OFFSETS;
-        const candidate = {
-          type: piece.type,
-          x: piece.x + adjust[from][0] - adjust[to][0],
-          y: piece.y + adjust[from][1] - adjust[to][1],
-          rot: to
-        };
-        if (canPlace(candidate, board)) {
-          applyRotation(piece, candidate);
-          return true;
-        }
-        return false;
-      }
-
-      const baseCandidate = { type: piece.type, x: piece.x, y: piece.y, rot: to };
-      if (canPlace(baseCandidate, board)) {
-        applyRotation(piece, baseCandidate);
-        return true;
-      }
-
-      const kicks = get180KickTests(piece.type, from, to);
-      for (let i = 0; i < kicks.length; i++) {
-        const dx = kicks[i][0];
-        const dy = kicks[i][1];
-        if (dx === 0 && dy === 0) continue;
-        const candidate = { type: piece.type, x: piece.x + dx, y: piece.y + dy, rot: to };
-        if (canPlace(candidate, board)) {
-          applyRotation(piece, candidate);
-          return true;
-        }
-      }
-
-      const cwFallback = { type: piece.type, x: piece.x, y: piece.y, rot: piece.rot & 3 };
-      if (tryRotate90Mutable(cwFallback, true, board) && tryRotate90Mutable(cwFallback, true, board)) {
-        applyRotation(piece, cwFallback);
-        return true;
-      }
-
-      const ccwFallback = { type: piece.type, x: piece.x, y: piece.y, rot: piece.rot & 3 };
-      if (tryRotate90Mutable(ccwFallback, false, board) && tryRotate90Mutable(ccwFallback, false, board)) {
-        applyRotation(piece, ccwFallback);
-        return true;
-      }
-
-      return false;
-    }
-
-    function spawnPiece(type, board) {
-      const center = Math.floor(board.width / 2);
-      const spawnY = type === 'I' ? -1 : -2;
-      let spawnX;
-      if (type === 'I' || type === 'O') {
-        // Center the I and O pieces on spawn.
-        spawnX = center - 1;
-      } else {
-        // Lean the remaining pieces one column to the left of absolute center.
-        spawnX = center - 1;
-      }
-      return { type, x: spawnX, y: spawnY, rot: 0 };
-    }
-
-    function set180Kickset(newKickset) {
-      kicks180 = mergeKicksets(DEFAULT_180_KICKS, newKickset);
-    }
-
-    const api = {
-      spawnPiece,
-      getCells,
-      canPlace,
-      tryRotateCW(piece, board) {
-        return tryRotate90Mutable(piece, true, board);
-      },
-      tryRotateCCW(piece, board) {
-        return tryRotate90Mutable(piece, false, board);
-      },
-      tryRotate180(piece, board) {
-        return tryRotate180Mutable(piece, board);
-      },
-      set180Kickset,
-      options,
-      KICKS90
-    };
-
-    Object.defineProperty(api, 'KICKS180', {
-      enumerable: true,
-      get() {
-        return kicks180;
-      }
-    });
-
-    window.SRS = api;
-
-    if (window.DEBUG_SRS) {
-      const debugBoard = {
-        width: 10,
-        height: 40,
-        isEmpty(x, y) {
-          if (x < 0 || x >= this.width) return false;
-          if (y >= this.height) return false;
-          return true;
-        }
-      };
-
-      const tPiece = { type: 'T', x: 0, y: 0, rot: 0 };
-      console.log('[DEBUG_SRS] T near wall rotate CW:', window.SRS.tryRotateCW(tPiece, debugBoard), tPiece);
-
-      const iPiece = { type: 'I', x: 0, y: 1, rot: 0 };
-      console.log('[DEBUG_SRS] I near wall rotate CW:', window.SRS.tryRotateCW(iPiece, debugBoard), iPiece);
-
-      const lPiece = { type: 'L', x: 0, y: 0, rot: 1 };
-      console.log('[DEBUG_SRS] L 180 kick (R>L):', window.SRS.tryRotate180(lPiece, debugBoard), lPiece);
-    }
-  })();
 
 const i18n = {
   ru: {
@@ -887,32 +516,34 @@ const TETROMINO_SHAPES = {
     [[0, 0], [1, 0], [0, 1], [1, 1]]
   ]
 };
+// JLSTZ (includes T, J, L, S, Z). Y-DOWN => all Y already inverted.
 const JLSTZ_KICKS = {
-  '0>1': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2]],
-  '1>0': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2]],
+  '0>1': [[0,0], [-1,0], [-1,-1], [0, 2], [-1, 2]],
+  '1>0': [[0,0], [ 1,0], [ 1, 1], [0,-2], [ 1,-2]],
 
-  '1>2': [[0, 0], [1, 0], [1, -1], [0, 2], [1, 2]],
-  '2>1': [[0, 0], [-1, 0], [-1, 1], [0, -2], [-1, -2]],
+  '1>2': [[0,0], [ 1,0], [ 1, 1], [0,-2], [ 1,-2]],
+  '2>1': [[0,0], [-1,0], [-1,-1], [0, 2], [-1, 2]],
 
-  '2>3': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]],
-  '3>2': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2]],
+  '2>3': [[0,0], [ 1,0], [ 1,-1], [0, 2], [ 1, 2]],
+  '3>2': [[0,0], [-1,0], [-1, 1], [0,-2], [-1,-2]],
 
-  '3>0': [[0, 0], [-1, 0], [-1, -1], [0, 2], [-1, 2]],
-  '0>3': [[0, 0], [1, 0], [1, 1], [0, -2], [1, -2]]
+  '3>0': [[0,0], [-1,0], [-1, 1], [0,-2], [-1,-2]],
+  '0>3': [[0,0], [ 1,0], [ 1,-1], [0, 2], [ 1, 2]]
 };
 
+// I-piece SRS+ (tetr.io-style symmetric I kicks), Y-DOWN.
 const I_KICKS = {
-  '0>1': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
-  '1>0': [[0, 0], [2, 0], [-1, 0], [2, 1], [-1, -2]],
+  '0>1': [[0,0], [-2,0], [ 1,0], [-2, 1], [ 1,-2]],
+  '1>0': [[0,0], [ 2,0], [-1,0], [ 2,-1], [-1, 2]],
 
-  '1>2': [[0, 0], [-1, 0], [2, 0], [-1, 2], [2, -1]],
-  '2>1': [[0, 0], [1, 0], [-2, 0], [1, -2], [-2, 1]],
+  '1>2': [[0,0], [-1,0], [ 2,0], [-1,-2], [ 2, 1]],
+  '2>1': [[0,0], [ 1,0], [-2,0], [ 1, 2], [-2,-1]],
 
-  '2>3': [[0, 0], [2, 0], [-1, 0], [2, 1], [-1, -2]],
-  '3>2': [[0, 0], [-2, 0], [1, 0], [-2, -1], [1, 2]],
+  '2>3': [[0,0], [ 2,0], [-1,0], [ 2,-1], [-1, 2]],
+  '3>2': [[0,0], [-2,0], [ 1,0], [-2,-1], [ 1, 2]],
 
-  '3>0': [[0, 0], [1, 0], [-2, 0], [1, -2], [-2, 1]],
-  '0>3': [[0, 0], [-1, 0], [2, 0], [-1, 2], [2, -1]]
+  '3>0': [[0,0], [-2,0], [ 1,0], [-2,-1], [ 1, 2]],
+  '0>3': [[0,0], [ 2,0], [-1,0], [ 2, 1], [-1,-2]]
 };
 
 const O_KICKS = {
