Add synchronized ready start flow for multiplayer

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,9 @@
           <button id="createRoomBtn"></button>
           <div class="match-room-code" id="matchRoomCode"></div>
         </div>
+        <div class="match-form-row">
+          <button id="readyBtn" class="match-ready-btn" style="display:none"></button>
+        </div>
       </div>
       <div class="match-boards hidden" id="matchBoards">
         <div class="match-board">
