Refactor localization and settings services

--- a/public/index.html
+++ b/public/index.html
@@ -141,6 +141,6 @@
   <button id="resultMenuBtn"></button>
 </div>
 
-<script src="main.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
